--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infinite Images</title>
-    <link rel="icon" type="image/png" href="anish.ico">
+    <link rel="icon" type="image/png" href="img/anish.ico">
     
     <!-- Old Favicon - Grab Icon From Google (Might be unsupported in the future) -->
     <!-- <link rel="icon" type="image/png" href="https://s2.googleusercontent.com/s2/favicons?domain=jacinto.design"> -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <!-- Title -->
     <h1>Infinite Images - Unsplash API</h1>
     <!-- Loader -->
     <div class="loader" id="loader">
-        <img src="/loader.svg" alt="Loader">
+        <img src="img/loader.svg" alt="Loader">
     </div>
 
     <!-- Image Container -->
