--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <!-- Old Favicon - Grab Icon From Google (Might be unsupported in the future) -->
     <!-- <link rel="icon" type="image/png" href="https://s2.googleusercontent.com/s2/favicons?domain=jacinto.design"> -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Title -->
